--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 group 'com.chaos'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
 apply plugin: 'scala'
 
 sourceCompatibility = 1.8
@@ -15,6 +14,5 @@ dependencies {
     compile group: 'org.scala-lang', name: 'scala-library', version: '2.11.8'
     compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.1.2'
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '0.9.7'
-
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'com.lmax', name: 'disruptor', version: '3.3.6'
 }
