--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     compile group: 'org.scala-lang', name: 'scala-library', version: '2.11.8'
+    compile group: 'com.jsuereth', name: 'scala-arm_2.11', version: '2.0'
     compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.1.2'
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '0.9.7'
     compile group: 'com.lmax', name: 'disruptor', version: '3.3.6'
